Use OverflowControlsClip for scrollbars

We create 2 clips for scrollable area:

1. OverflowControlsClip
2. OverflowClip

OverflowControlsClip includes scrollbar and OverflowClip excludes.

Currently, we set LocalBorderBoxProperties or cssclip as clip to
PropertyTreeState in CompositingLayerPropertyUpdater::Update when walk through
layers which is incorrect for scrollbars.

In this patch, we set OverflowControlsClip as clip to scrollbars and scroll
corner in CompositingLayerPropertyUpdater::Update.

Bug: 841342
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3bafb7bd542bacaa998897867249861122df9516
Reviewed-on: https://chromium-review.googlesource.com/1069493
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561226}
Former-commit-id: bcd51e1bd9608026939396e7d808583cf492905d